# EnglishMorseConverter

./: .clang-tidy  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
cmakeHelpers/: CMakeHelpersPrivate.cmake  CMakeLists.txt  ConfigurePresetsBase.json  cmake-variants.yaml  toolchain.cmake
lib/: CMakeLists.txt
lib/BidirectionalMapper/: CMakeLists.txt
lib/BidirectionalMapper/inc/: BidirectionalMorseMapper.hpp
lib/BidirectionalMapper/private/: BidirectionalMorseMapper.cpp
lib/TextTraits/: CMakeLists.txt
lib/TextTraits/inc/: TextTraits.hpp
lib/TextTraits/private/: TextTraits.cpp
plugins/: CMakeLists.txt
plugins/EnglishMorseMapper/: CMakeLists.txt  EnglishMorseMapper.cpp  EnglishMorseMapper.hpp
plugins/QMLLiveReloader/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  LoaderLiveControls.qml
src/: CMakeLists.txt  main.cpp
src/gui/: ConverterView.qml  Main.qml  MainLoadable.qml  MainLoadable.qml.autosave
test/: CMakeLists.txt  EnglishMorseMapperTest.cpp  README.md  SoundexTest.cpp  TextTokenizerTest.cpp  TextTraitsTest.cpp
test/SharedPtr/: CMakeLists.txt  SharedPtrTest.cpp  main.cpp
